Issue: [MOSC #795] Subject:Criar menu configuracao quando usuario logado Detail: add funcionalidade de alto contraste

--- a/css/base.css
+++ b/css/base.css
@@ -6661,7 +6661,7 @@ body {
   background-attachment: fixed;
 }
 .section-primary {
-  background-color: #337cbb !important;
+  background-color: #337cbb;
   color: #ffffff;
 }
 .section-primary .background-image {
@@ -6841,6 +6841,7 @@ body {
 }
 .partners {
   background-color: #e0e0e0;
+  border-bottom:2px solid #ffffff;
 }
 .barra-governo {
   width: 100%;
